vbnc/vbnc/vbnc/tests/Errors/32101.vb
Namespace Constraint1
    Class A(Of Z As {Class, Class})

    End Class
End Namespace